@@ -1,0 +1,13 @@
+function p = hexaplane(r);
+% hexaplane(r) -- Returns pole locations of hexagonal-plane aligned pole
+% pieces (jcribb)
+
+p = r .* [          0,            1,          0  ; ...
+           -sin(pi/3),    cos(pi/3),          0  ; ...
+           -sin(pi/3),   -cos(pi/3),          0  ; ...
+                    0,           -1,          0  ; ...
+            sin(pi/3),   -cos(pi/3),          0  ; ...
+            sin(pi/3),    cos(pi/3),          0  ];
+    
+
+
